soroban-sdk/tests/trybuild/contractimpl_fn_name_too_long.stderr
error: contract function name too long, max length 10 characters
 --> tests/trybuild/contractimpl_fn_name_too_long.rs:7:12
  |
7 |     pub fn pay_to_destination() {
  |            ^^^^^^^^^^^^^^^^^^
